2009-12-13  Frank Lanitz  <frank@frank.uvena.de>

 * Show geanyLipsum inside plugin manager dialog


2009-04-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add not complete part of Lorem Ipsum text if there is any at end of 
   insertion.


2009-04-01  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Preparation for 0.1.1 maintenance release


2009-03-24  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Applied a patch by Enrico to improve code and fix some memory
   leaks


2009-01-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Update to plugin API v128

